# CodeMindAI-Code-Understanding-system

./: Project 2 Codemind Report.docx
.next/: trace
codemind-ai/: .dockerignore  .gitignore  DEPLOYMENT.md  DOC.md  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
codemind-ai/api/: main.py
codemind-ai/codemind/: __init__.py  __main__.py  cli.py  config.py
codemind-ai/codemind/analyzer/: __init__.py  architecture.py  dependencies.py  execution.py  performance.py  persistence.py  quality.py  security.py  structure.py
codemind-ai/codemind/embedding/: __init__.py  search.py  vector_store.py
codemind-ai/codemind/graph/: __init__.py  builder.py  knowledge_graph.py  relations.py
codemind-ai/codemind/outputs/: __init__.py  ai_doc_generator.py  diagrams.py  documentation.py  onboarding.py  reporter.py
codemind-ai/codemind/parsers/: __init__.py  generic_parser.py  javascript_parser.py  python_parser.py
codemind-ai/codemind/utils/: __init__.py  file_utils.py  graph_utils.py  logging_utils.py
codemind-ai/config/: default.json
codemind-ai/config/profiles/: full_analysis.json  quick_scan.json  security_focus.json
codemind-ai/config/rules/: architecture_detection.json  code_quality.json  security_patterns.json
codemind-ai/tests/: test_architecture.py  test_config.py  test_dependencies.py  test_graph.py  test_security.py  test_structure.py
codemind-frontend/: .gitignore  README.md  backend.md  package-lock.json  package.json
codemind-frontend/src/app/: globals.css  layout.tsx  loading.tsx  providers.tsx
codemind-frontend/src/app/api/: data.ts
codemind-frontend/src/app/api/architecture/: architecture-analyzer.ts  types.ts
codemind-frontend/src/app/api/chat/: route.ts
codemind-frontend/src/app/api/dataflow/: extract-dataflow.ts
codemind-frontend/src/app/api/documentation/: generate-build-plan.ts  generate-documentation.ts
codemind-frontend/src/app/api/onboarding/: generate-onboarding.ts
codemind-frontend/src/app/api/repositories/: route.ts
codemind-frontend/src/app/api/upload/: route.ts
codemind-frontend/src/app/architecture/: page.tsx
codemind-frontend/src/app/chat/: page.tsx
codemind-frontend/src/app/dashboard/: page.tsx
codemind-frontend/src/app/data-flow/: page.tsx
codemind-frontend/src/app/docs/: page.tsx
codemind-frontend/src/app/docs/[id]/: page.tsx
codemind-frontend/src/app/onboarding/: page.tsx
codemind-frontend/src/app/repositories/: page.tsx
codemind-frontend/src/app/repositories/[id]/: page.tsx
codemind-frontend/src/app/settings/: page.tsx
codemind-frontend/src/components/: build-from-scratch.tsx  code-viewer.tsx  error-boundary.tsx  mermaid-diagram.tsx  module-drawer.tsx  navbar.tsx  navigation-loader.tsx  sidebar.tsx  theme-provider.tsx  theme-script.tsx
codemind-frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  skeleton.tsx  tabs.tsx
codemind-frontend/src/hooks/: use-dropzone.ts
codemind-frontend/src/layouts/: app-layout.tsx
codemind-frontend/src/lib/: constants.ts  mermaidExport.ts  utils.ts
codemind-frontend/src/services/: api.ts
codemind-frontend/src/store/: architecture-store.ts  chat-store.ts  dataflow-store.ts  repository-store.ts  settings-store.ts
codemind-frontend/src/types/: index.ts
codemind-frontend/src/utils/: export-pdf.ts
(+19 files in other folders)
