[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codemind-ai"
version = "0.1.0"
description = "Repository Intelligence System — analyze, document, and understand any codebase"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["code-analysis", "architecture", "repository-intelligence", "documentation", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/your-org/codemind-ai"
Repository = "https://github.com/your-org/codemind-ai"
Documentation = "https://github.com/your-org/codemind-ai#readme"

[project.scripts]
codemind = "codemind.cli:main"

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools.packages.find]
include = ["codemind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["codemind"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
